# opendbviewer

./: .gitignore  CMakeLists.txt  CPackOptions.cmake.in  ChangeLog  README  README.md  build.sh  config.h.in  ts.qrc.in
CMakeModules/: IncludeLibraries.cmake  IncludeMacro.cmake  IncludeProductImage.cmake  ProductImageUtils.cmake  ProjectCommonConfig.cmake  ProjectCompilerChecks.cmake  ProjectIncludeLibraries.cmake  ProjectIncludeLibrariesQt.cmake  ProjectQtUsefulMacros.cmake  ProjectUsefulMacros.cmake  glibc.cmake
data/: .gitignore  app.qrc.in  desktop.in
data/logos/: .gitignore  create_icons.sh  icon.rc.in  opendbviewer.icns
data/theme/icons_src/: author  index.theme
src/: main.cpp
src/Common/: QGuiHelper.cpp  QGuiHelper.h
src/Controller/: ConfigDatabaseController.cpp  ConfigDatabaseController.h
src/Database/: DatabaseCallback.h  DatabaseController.cpp  DatabaseController.h  DatabaseControllerMysql.cpp  DatabaseControllerMysql.h  DatabaseControllerPostgreSQL.cpp  DatabaseControllerPostgreSQL.h  DatabaseControllerSqlite.cpp  DatabaseControllerSqlite.h  DatabaseProcessHandler.cpp  DatabaseProcessHandler.h
src/GUI/: QAboutDialog.cpp  QAboutDialog.h  QDatabaseConnectionView.cpp  QDatabaseConnectionView.h  QDatabaseSelectionView.cpp  QDatabaseSelectionView.h  QDatabaseTableView.cpp  QDatabaseTableView.h  QDatabaseWorksheetView.cpp  QDatabaseWorksheetView.h  QExportParametersDialog.cpp  QExportParametersDialog.h  QExportParametersProgressBarDialog.cpp  QImportParametersDialog.cpp  QImportParametersDialog.h  QLineNumberAreaView.h  QOpenDatabaseDialog.cpp  QOpenDatabaseDialog.h  QOpenDatabaseView.cpp  QOpenDatabaseView.h  QOpenHistoryView.cpp  QOpenHistoryView.h  QProgressBarDialog.cpp  QProgressBarDialog.h  QQueryResultView.cpp  QQueryResultView.h  QSqlSourceView.cpp  QSqlSourceView.h  QWindowMain.cpp  QWindowMain.h
src/GUIController/: QDatabaseConnectionViewController.cpp  QDatabaseConnectionViewController.h  QDatabaseSelectionViewController.cpp  QDatabaseSelectionViewController.h  QDatabaseTableViewController.cpp  QDatabaseTableViewController.h  QDatabaseWorksheetViewController.cpp  QDatabaseWorksheetViewController.h  QOpenDatabaseDialogController.cpp  QOpenDatabaseDialogController.h  QOpenDatabaseViewController.cpp  QOpenDatabaseViewController.h  QOpenHistoryViewController.cpp  QOpenHistoryViewController.h  QSqlHighlighterController.cpp  QSqlHighlighterController.h  QWindowMainController.cpp  QWindowMainController.h
src/GUIModel/: HTMLDelegate.cpp  HTMLDelegate.h  QHistoryDatabaseItem.cpp  QHistoryDatabaseItem.h  QHistoryDatabaseModel.cpp  QHistoryDatabaseModel.h  QSqlDisplayQueryModel.cpp  QSqlDisplayQueryModel.h  QSqlDisplayTableModel.cpp  QSqlDisplayTableModel.h
src/Global/: ApplicationSettings.cpp  ApplicationSettings.h  QtCompat.h
src/Image/: QIconThemeFallback.cpp  QIconThemeFallback.h
src/Model/: ConfigDatabase.cpp  ConfigDatabase.h  DatabaseModel.cpp  DatabaseModel.h  FavouriteDatabaseList.cpp  FavouriteDatabaseList.h  HistoryDatabaseList.cpp  HistoryDatabaseList.h
src/Settings/: QSettingsManager.cpp  QSettingsManager.h
src/Widget/: QDropAreaWidget.cpp  QDropAreaWidget.h  QFileExplorerWidget.cpp  QFileExplorerWidget.h  QHistoryMenuWidget.cpp  QHistoryMenuWidget.h  QMidClickClosableTabWidget.cpp  QMidClickClosableTabWidget.h
test/: main.cpp
test/Model/: FavouriteDatabaseListTestCase.cpp  FavouriteDatabaseListTestCase.h  HistoryDatabaseListTestCase.cpp  HistoryDatabaseListTestCase.h
ts/: fr.ts  ru.ts  uk.ts
